Finalize tmux configuration revamp

--- a/tmux/tmux/tmux.conf
+++ b/tmux/tmux/tmux.conf
@@ -9,13 +9,17 @@
 set -g default-terminal "screen-256color" # set terminal type for 256-color support
 set -ga terminal-overrides ",*256col*:Tc" # override to enable true-color for compatible terminals
 
-set -g set-clipboard external  # use system clipboard
-set -s escape-time 5           # faster command sequences
-set -g history-limit 100000    # boost history
-set -g mouse on                # enable mouse support
-set -g status-interval 1       # redraw status line every second
-set -g allow-passthrough on    # allow programs in the pane to bypass tmux (e.g. for image preview)
-set -g status-position top
+set -g allow-passthrough on     # allow programs in the pane to bypass tmux (e.g. for image preview)
+set -g history-limit 100000     # boost history
+set -g mouse on                 # enable mouse support
+set -g set-clipboard external   # use system clipboard
+set -s escape-time 5            # faster command sequences
+set -s focus-events on          # pass focus events to applications
+set -sg repeat-time 600         # increase repeat timeout
+
+# Activity
+set -g monitor-activity on      # monitor activity in panes
+set -g visual-activity on       # visual indicator for activity
 
 ### Key bindings
 
@@ -39,41 +43,34 @@ bind ] split-window -v -c "#{pane_current_path}"
 # Switch back to last window easily
 bind Tab last-window
 
+# Pane resizing
+unbind M-Up
+bind -r S-Up resize-pane -U 5
+unbind M-Down
+bind -r S-Down resize-pane -D 5
+unbind M-Left
+bind -r S-Left resize-pane -L 5
+unbind M-Right
+bind -r S-Right resize-pane -R 5
 
-set -sg repeat-time 600                   # increase repeat timeout
-set -s focus-events on
+### UI
 
+# Theme
+source-file ~/.config/tmux/nord-theme.conf
+
+set -g display-panes-time 800   # slightly longer pane indicators display time
+set -g display-time 1000        # slightly longer status messages display time
+set -g status-interval 1        # redraw status line every second
+set -g status-position top      # move status line to top
+
+# Window and pane numbering
 set -g base-index 1         # start windows numbering at 1
 setw -g pane-base-index 1   # make pane numbering consistent with windows
-
 set -g renumber-windows on  # renumber windows when a window is closed
-
-set -g display-panes-time 800 # slightly longer pane indicators display time
-set -g display-time 1000      # slightly longer status messages display time
-
-
-# clear both screen and history
-bind -n C-l send-keys C-l \; run 'sleep 0.1' \; clear-history
-
-# activity
-set -g monitor-activity on
-set -g visual-activity on
 
 # Show basename of cwd in window title if it's a shell, otherwise show command name
 set -g automatic-rename on
 set-option -g automatic-rename-format "#{?#{==:#{pane_current_command},zsh},#{b:pane_current_path},#{pane_current_command}}"
-
-
-# Temporarily turn pane into window
-unbind Up
-bind Up new-window -d -n tmp \; swap-pane -s tmp.1 \; select-window -t tmp
-unbind Down
-bind Down last-window \; swap-pane -s tmp.1 \; kill-window -t tmp
-
-# Quick logging
-bind P pipe-pane -o "cat >>~/#W.log" \; display "Toggled logging to ~/#W.log"
-
-source-file ~/.config/tmux/nord-theme.conf
 
 ### Plugins
 
