tmux: disable mouse and add keybinding for toggling it

--- a/tmux/tmux/tmux.conf
+++ b/tmux/tmux/tmux.conf
@@ -11,7 +11,6 @@ set -ga terminal-overrides ",*256col*:Tc" # override to enable true-color for co
 
 set -g allow-passthrough on     # allow programs in the pane to bypass tmux (e.g. for image preview)
 set -g history-limit 100000     # boost history
-set -g mouse on                 # enable mouse support
 set -g set-clipboard external   # use system clipboard
 set -s escape-time 5            # faster command sequences
 set -s focus-events on          # pass focus events to applications
@@ -42,6 +41,10 @@ bind ] split-window -v -c "#{pane_current_path}"
 
 # Switch back to last window easily
 bind Tab last-window
+
+# Toggle mouse mode
+unbind m
+bind m set-option -g mouse
 
 # Pane resizing
 unbind M-Up
