tmux: Fix colors in Alacritty

--- a/tmux/tmux/tmux.conf
+++ b/tmux/tmux/tmux.conf
@@ -6,8 +6,8 @@
 ### General
 
 # Enable 256-color and true-color (24-bit) support
-set -g default-terminal "screen-256color" # set terminal type for 256-color support
-set -ga terminal-overrides ",*256col*:Tc" # override to enable true-color for compatible terminals
+set -g default-terminal "screen-256color"   # set terminal type for 256-color support
+set -as terminal-overrides ",alacritty*:Tc" # override to enable true-color for Alacritty
 
 set -g allow-passthrough on     # allow programs in the pane to bypass tmux (e.g. for image preview)
 set -g history-limit 100000     # boost history
