tmux: Update mouse behavior

--- a/tmux/tmux/tmux.conf
+++ b/tmux/tmux/tmux.conf
@@ -11,6 +11,7 @@ set -as terminal-overrides ",alacritty*:Tc" # override to enable true-color for 
 
 set -g allow-passthrough on     # allow programs in the pane to bypass tmux (e.g. for image preview)
 set -g history-limit 100000     # boost history
+set -g mouse on                 # enable mouse support
 set -g set-clipboard external   # use system clipboard
 set -s escape-time 5            # faster command sequences
 set -s focus-events on          # pass focus events to applications
@@ -45,6 +46,9 @@ bind Tab last-window
 # Toggle mouse mode
 unbind m
 bind m set-option -g mouse
+
+# Don't enter copy mode on  mouse scroll
+unbind -T root WheelUpStatus
 
 # Pane resizing
 unbind M-Up
