--- a/tmux/tmux/tmux.conf
+++ b/tmux/tmux/tmux.conf
@@ -34,6 +34,9 @@ bind e new-window -n 'tmux.conf' "sh -c '\${EDITOR:-vim} ~/.config/tmux/tmux.con
 # Reload tmux configuration
 bind r source-file ~/.config/tmux/tmux.conf \; display 'reloaded config'
 
+# Open a lazygit popup for the current directory
+bind g display-popup -d "#{pane_current_path}" -w 90% -h 90% -E "lazygit"
+
 # Better split commands
 unbind %
 bind \\ split-window -h -c "#{pane_current_path}"
