--- a/tmux/tmux/tmux.conf
+++ b/tmux/tmux/tmux.conf
@@ -37,6 +37,9 @@ bind r source-file ~/.config/tmux/tmux.conf \; display 'reloaded config'
 # Open a lazygit popup for the current directory
 bind g display-popup -d "#{pane_current_path}" -w 90% -h 90% -E "lazygit"
 
+# Open a jjui popup for the current directory
+bind j display-popup -d "#{pane_current_path}" -w 90% -h 90% -E "jjui"
+
 # Better split commands
 unbind %
 bind \\ split-window -h -c "#{pane_current_path}"
