--- a/tmux/tmux/tmux.conf
+++ b/tmux/tmux/tmux.conf
@@ -89,8 +89,9 @@ set-option -g automatic-rename-format "#{?#{==:#{pane_current_command},zsh},#{b:
 
 # tpm plugin manager
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-resurrect'  # persist tmux sessions after computer restart
-set -g @plugin 'tmux-plugins/tmux-continuum'  # automatically saves sessions every 15 minutes
+set -g @plugin 'tmux-plugins/tmux-resurrect'    # persist tmux sessions after computer restart
+set -g @plugin 'tmux-plugins/tmux-continuum'    # automatically saves sessions every 15 minutes
+set -g @plugin 'kristijan/tmux-fzf-pane-switch' # A tmux plugin that uses fzf to switch to a pane in any session.
 
 # Resurrect
 set -g @resurrect-capture-pane-contents 'on'
