--- a/tmux/tmux/tmux.conf
+++ b/tmux/tmux/tmux.conf
@@ -36,6 +36,7 @@ bind r source-file ~/.config/tmux/tmux.conf \; display 'reloaded config'
 
 # Open a lazygit popup for the current directory
 bind g display-popup -d "#{pane_current_path}" -w 90% -h 90% -E "lazygit"
+bind G display-popup -d "#{pane_current_path}" -w 90% -h 90% -E "gitu"
 
 # Open a jjui popup for the current directory
 bind j display-popup -d "#{pane_current_path}" -w 90% -h 90% -E "jjui"
