tmux: Update choose-session binding

--- a/tmux/tmux/tmux.conf
+++ b/tmux/tmux/tmux.conf
@@ -67,6 +67,10 @@ bind -r S-Left resize-pane -L 5
 unbind M-Right
 bind -r S-Right resize-pane -R 5
 
+# Session listing/switching
+unbind s # handled by kristijan/tmux-fzf-pane-switch
+bind S choose-session
+
 ### UI
 
 # Theme
