--- a/alacritty/alacritty/alacritty.toml
+++ b/alacritty/alacritty/alacritty.toml
@@ -16,7 +16,7 @@ bindings = [
   # Map Option-Right to forward-word
   { mods = "Option", key = "Right", chars = "\u001bF" },
   # Map Option-. to insert-last-word
-  { mods = "Alt", key = "Period", chars = "\u001b." },
+  { mods = "Option", key = "Period", chars = "\u001b." },
   # Shift+Return sends ESC+Enter to work in tmux
   { mods = "Shift", key = "Return",  chars = "\u001b\r" }
 ]
