--- a/tmux/tmux/tmux.conf
+++ b/tmux/tmux/tmux.conf
@@ -6,8 +6,8 @@
 ### General
 
 # Enable 256-color and true-color (24-bit) support
-set -g default-terminal "screen-256color"   # set terminal type for 256-color support
-set -as terminal-overrides ",alacritty*:Tc" # override to enable true-color for Alacritty
+set -g default-terminal "xterm-256color"          # set terminal type for 256-color support
+set -as terminal-overrides ",xterm-256color:RGB"  # override to enable true-color for Alacritty
 
 set -g allow-passthrough on     # allow programs in the pane to bypass tmux (e.g. for image preview)
 set -g history-limit 100000     # boost history
@@ -93,7 +93,7 @@ set-option -g automatic-rename-format "#{?#{==:#{pane_current_command},zsh},#{b:
 ### Plugins
 
 # tpm plugin manager
-set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tpm'               # tmux plugin manager
 set -g @plugin 'tmux-plugins/tmux-resurrect'    # persist tmux sessions after computer restart
 set -g @plugin 'tmux-plugins/tmux-continuum'    # automatically saves sessions every 15 minutes
 set -g @plugin 'kristijan/tmux-fzf-pane-switch' # A tmux plugin that uses fzf to switch to a pane in any session.
