--- a/topgrade/topgrade.toml
+++ b/topgrade/topgrade.toml
@@ -71,7 +71,7 @@ disable = [
 
 # Custom commands
 [commands]
-#"Python Environment" = "~/dev/.env/bin/pip install -i https://pypi.python.org/simple -U --upgrade-strategy eager jupyter"
+"Nix Darwin" = "/run/current-system/sw/bin/nix-sync -u --gc" 
 
 [brew]
 #greedy_cask = true
