--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -5,7 +5,7 @@
 [core]
   attributesfile = ~/.gitattributes
   autocrlf = input
-  editor = vim
+  editor = nvim
   excludesfile = ~/.gitignore
 [commit]
   gpgsign = true
