git: Add +startinsert! to core.editor for nvim

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -5,7 +5,7 @@
 [core]
   attributesfile = ~/.gitattributes
   autocrlf = input
-  editor = nvim
+  editor = "nvim +startinsert!"
   excludesfile = ~/.gitignore
 [commit]
   gpgsign = true
