tmux: Hard-code nvim as config editor

--- a/tmux/tmux/tmux.conf
+++ b/tmux/tmux/tmux.conf
@@ -29,7 +29,7 @@ set -g prefix C-a
 bind C-a send-prefix
 
 # Edit tmux configuration
-bind e new-window -n 'tmux.conf' "sh -c '\${EDITOR:-vim} ~/.config/tmux/tmux.conf && tmux source ~/.config/tmux/tmux.conf && tmux display \"reloaded config\"'"
+bind e new-window -n 'tmux.conf' "sh -c 'nvim ~/.config/tmux/tmux.conf && tmux source ~/.config/tmux/tmux.conf && tmux display \"reloaded config\"'"
 
 # Reload tmux configuration
 bind r source-file ~/.config/tmux/tmux.conf \; display 'reloaded config'
