tmux: Remove lazygit popup, rebind gitu popup

--- a/tmux/tmux/tmux.conf
+++ b/tmux/tmux/tmux.conf
@@ -34,9 +34,8 @@ bind e new-window -n 'tmux.conf' "sh -c 'nvim ~/.config/tmux/tmux.conf && tmux s
 # Reload tmux configuration
 bind r source-file ~/.config/tmux/tmux.conf \; display 'reloaded config'
 
-# Open a lazygit popup for the current directory
-bind g display-popup -d "#{pane_current_path}" -w 90% -h 90% -E "lazygit"
-bind G display-popup -d "#{pane_current_path}" -w 90% -h 90% -E "gitu"
+# Open a gitu popup for the current directory
+bind g display-popup -d "#{pane_current_path}" -w 90% -h 90% -E "gitu"
 
 # Open a jjui popup for the current directory
 bind j display-popup -d "#{pane_current_path}" -w 90% -h 90% -E "jjui"
