aerc: update config

--- a/aerc/aerc/aerc.conf
+++ b/aerc/aerc/aerc.conf
@@ -5,7 +5,7 @@
 # Used as a default path for save operations if no other path is specified.
 # ~ is expanded to the current user home dir.
 #
-#default-save-path=
+default-save-path=~/Downloads
 
 # If set to "gpg", aerc will use system gpg binary and keystore for all crypto
 # operations. If set to "internal", the internal openpgp keyring will be used.
@@ -333,14 +333,14 @@
 # Sets the styleset to use for the aerc ui elements.
 #
 # Default: default
-#styleset-name=default
+#styleset-name=
 
 # Activates fuzzy search in commands and their arguments: the typed string is
 # searched in the command or option in any position, and need not be
 # consecutive characters in the command or option.
 #
 # Default: false
-#fuzzy-complete=false
+fuzzy-complete=true
 
 # How long to wait after the last input before auto-completion is triggered.
 #
@@ -625,7 +625,7 @@ threading-enabled=true
 # none of their specified headers are present in the message.
 #
 # Default: From|To,Cc|Bcc,Date,Subject
-#header-layout=From|To,Cc|Bcc,Date,Subject
+header-layout=From,To,Cc,Bcc,Date,Subject
 
 # Whether to always show the mimetype of an email, even when it is just a single part
 #
@@ -717,7 +717,7 @@ threading-enabled=true
 # Warn before sending an email with an empty subject.
 #
 # Default: false
-#empty-subject-warning=false
+empty-subject-warning=true
 
 #
 # Warn before sending an email that matches the specified regexp but does not
@@ -729,7 +729,7 @@ threading-enabled=true
 # Example:
 # no-attachment-warning=^[^>]*attach(ed|ment)
 #
-#no-attachment-warning=
+no-attachment-warning=^[^>]*attach(ed|ment)
 
 #
 # When set, aerc will generate "format=flowed" bodies with a content type of
